--- a/project/wwwroot/ShoppingBag.html
+++ b/project/wwwroot/ShoppingBag.html
@@ -6,8 +6,8 @@
     <link href="Style/ShoppingBag.css" rel="stylesheet" />
     <template id="temp-row">
         <tr class="item-row">
-            <td class="imageColumn"><a rel="lightbox" href="#"><div class="image"></div></a></td>
-            <td class="descriptionColumn"><div><h3 class="itemName"></h3><h6><p class="itemNumber"></p><a class="viewLink" href="https://www.next.co.il/he/g59522s11#407223">לפרטים נוספים</a></h6></div></td>
+            <td class="imageColumn"><a rel="lightbox" href="#"><img src="" width="200px"/></a></td>
+            <td class="descriptionColumn"><div><h3 class="itemName"></h3><h6><p class="itemNumber"></p></h6></div></td>
             <td class="quantity"><div></div></td>
             <td class="totalColumn delete"><div class="expandoHeight" style="height: 99px;"><p class="price"></p><button id="remove">הסרת פריט</button></div></td>
         </tr>
