--- a/project/wwwroot/Products.html
+++ b/project/wwwroot/Products.html
@@ -66,8 +66,7 @@
 
     <div id="filters" class="Filters fixedVisible">
         <div class="ResultCount" style="position: absolute; top: 0px;">
-            <button class="Clear" onclick="removeAllCart()">ריקון הסל עובד לי</button>
-            <div><span id="counter">  </span> מוצרים</div>
+            <button class="Clear" onclick="removeAllCart()">ריקון הסל</button>
             <div>
                 <span id="counter">
                 </span>
