--- a/project/wwwroot/ShoppingBag.html
+++ b/project/wwwroot/ShoppingBag.html
@@ -17,11 +17,14 @@
     <div class="cart">
         <div id="title">
             <h1> סל קניות </h1>
+            <br />
             <p>
-                הסל שלך מכיל <span id="itemCount"></span> פריטים ומגיע לסך של <span id="totalAmount"></span>.
+                הסל שלך מכיל <span id="itemCount"></span> פריטים ומגיע לסך של <span id="totalAmount"></span>.            <br />
             </p>
+
             <a class="nxbtn primary GoToCheckout TopLink checkout_transfer" href="#" onclick="placeOrder(); return false;">לביצוע ההזמנה</a> <a class="shopmore" href="Products.html?fromShoppingBag=1">המשך בקניה</a> <div class="ClearBoth"></div>
         </div>
+        <br />
         <div class="cistGroup">
             <table id="items" class="items">
                 <thead>
@@ -32,7 +35,6 @@
                     </tr>
                 </thead>
                 <tbody id="tbody">
-
                 </tbody>
             </table>
         </div>
